- Fixed the map rendering (X/Y where confused) - Added character rendering to the update loop - Removed debug spacing from the CSS.
git-svn-id: http://codesturgeon.svn.beanstalkapp.com/resthack@107 80554853-e439-4f06-b961-9753fd219b06

--- a/client/v0.3/css/common.css
+++ b/client/v0.3/css/common.css
@@ -36,6 +36,7 @@ img
 	width:512px;
 	height:512px;
 	border:1px solid red;
+	background-color:grey;
 }
 #textOutputID
 {
